Break in new lines the labels from NVD3 charts. (ODAEU-297)

--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/scripts/nvd3/nv.d3.css
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/scripts/nvd3/nv.d3.css
@@ -156,9 +156,13 @@ svg {
   height:100%;
 }
 
+svg:not(:root) {
+    overflow: hidden;
+}
 
 svg text {
   font: normal 12px Arial;
+  /*white-space: pre-line;*/
 }
 
 svg .title {
